# e2ee-file-sharing

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: api.rs  lib.rs  main.rs
client/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
corelib/: Cargo.toml
corelib/src/: client.rs  lib.rs  server.rs
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml
server/src/: api.rs  constants.rs  db.rs  main.rs  page.rs
