[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
corelib = { version = "0.1.0", path = "../corelib" }
postcard = { version = "1.1.1", features = ["use-std"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
rpassword = "7.3.1"
serde_json = "1.0.140"
