[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
corelib = { version = "0.1.0", path = "../corelib" }
axum = { version = "0.8.1", features = ["multipart", "macros"] }
tokio = { version = "1.43.0", features = ["rt", "macros", "fs", "rt-multi-thread"] }
tokio-util = { version = "0.7.14", features = ["io"] }
rusqlite = { version = "0.34.0", features = ["bundled", "vtab", "array"] }
serde = { version = "1.0.219", features = ["derive"] }
base64 = { version = "0.22.1" }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
zip = "2.4.x"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }


[dev-dependencies]
tower = "0.5.2"
http-body-util = "0.1.3"
serde_json = "1.0.140"
